--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,8 +4,17 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+user1:
+  username: 'test'
+  encrypted_password: <%= Digest::SHA1.hexdigest('testing') %>
+  is_admin: Yes
+
+user2:
+  username: 'test2'
+  encrypted_password: <%= Digest::SHA1.hexdigest('testing') %>
+  is_admin: No
+
+user3:
+  username: 'test3'
+  encrypted_password: <%= Digest::SHA1.hexdigest('testing') %>
+  is_admin: No
