--- a/test/fixtures/comments.yml
+++ b/test/fixtures/comments.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
-one:
-  text: MyText
+comment1:
+  text: 'Test comment from owner'
   post_id: 1
-  owner_id: 1
+  owner_id: 2
 
-two:
-  text: MyText
+comment2:
+  text: 'Test comment from non-owner'
   post_id: 1
-  owner_id: 1
+  owner_id: 3
